# Building-and-connecting-libraries

01/: CMakeLists.txt  main.cpp
01/lib/: CMakeLists.txt  greeter.cpp  greeter.h
02/: CMakeLists.txt  main.cpp
02/lib/: CMakeLists.txt  leaver.cpp  leaver.h
05/: CMakeLists.txt
05/quadrilaterals/: CMakeLists.txt
05/triangles/: CMakeLists.txt
